add some case test